# lifelogger

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.cursor/commands/: trellis-brainstorm.md  trellis-break-loop.md  trellis-check-cross-layer.md  trellis-create-command.md  trellis-finish-work.md  trellis-integrate-skill.md  trellis-onboard.md  trellis-start.md  trellis-update-spec.md
.trellis/: .template-hashes.json
.trellis/spec/backend/: directory-structure.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/04-07-init-lifelogger/: prd.md  task.json
.trellis/workspace/zyongzhu/: index.md  journal-1.md
config/: settings.yaml
diarizer/: speaker_diarizer.py
pipeline/: daily_pipeline.py  silence_filter.py  watch_pipeline.py
recorder/: audio_recorder.py  hotkey_controller.py
scripts/: com.lifelogger.pipeline.plist  com.lifelogger.recorder.plist  install.sh  install_launchd.sh  run_pipeline.sh  run_recorder.sh  setup_blackhole.sh  verify.py
transcriber/: whisper_transcriber.py
vault/: markdown_writer.py
